# SimpleRenamer

./: .gitignore  Cargo.toml  LICENSE.md  README.md  SimpleRenamer.json  gui.py  main.py  main.spec  post_install copy.ps1  post_install.ps1  post_uninstall.ps1  requirements.txt  scoop.json
src/: lib.rs  rename.rs  templates.rs  text_histo.rs
