[package]
name = "srenamer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
difflib = "*"
regex = "*"
lazy_static = "*"
cached = "*"
iced = "*"
dark-light = "*"
nfd2 = "*"
pathdiff = "*"

[dev-dependencies]
lipsum = "*"
