[package]
name = "srenamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "*"
eframe = "*"
anyhow = "*"
itertools = "*"
regex = "*"
cached = "*"
dark-light = "*"
nfd2 = "*"
pathdiff = "*"
log = "*"
env_logger = "*"
auto-regex = "*"